test/grammar/schema/init/init_err_key_fail_0/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:13:21
   |
13 |             "name": data.name_err_key,
   |                     ^ attribute 'name_err_key' not found in 'Frontend'
   |